<resources>
    <string name="app_name">OutdoorsmanApp</string>

    <string name="title_form_fragment">Please Confirm Type of Form</string>
    <string name="title_activity_maps">Map</string>
    <string name="record_current_date">Record Current Date</string>
    <string name="record_current_location">Record Current Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to the OutdoorsmanApp!</string>
    <string name="signInToContinue">Please Sign In to Continue</string>
    <string name="signIn">Sign In</string>
    <string name="ok">Okay</string>
    <string name="locPermBody">This app needs to access the device\'s location to track your harvest locations. Do you want to give permission?</string>
    <string name="locPermTitle">Location Access Required</string>
    <string name="gps_network_not_enabled">Location Services not enabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="enterDate">Enter the Date</string>
    <string name="recCurDate">Record the Current Date</string>
    <string name="pickLoc">Pick Location</string>
    <string name="recCurLoc">Record Current Location</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">\nLongitude: </string>
    <string name="chooseDate">Choose Date</string>
    <string name="chooseLoc">Choose Location</string>
    <string name="formSubmitted">Form Type submitted at: </string>
    <string name="confirm">Confirm</string>
    <string name="submitted">Submitted</string>
    <string name="type">Type: </string>
    <string name="date">Date: </string>
    <string name="pleaseConfirm">Please confirm </string>
    <string name="formDot">form.</string>
    <string name="harvestID">Harvest ID: </string>
    <string name="locColonLat">Location: lat:</string>
    <string name="typeID">Type ID: </string>

    <string-array name="form_types">
        <item>Fish</item>
        <item>Fowl</item>
        <item>Deer</item>
    </string-array>

    <string-array name="form_types_after_submit_options">
        <item>Submit Another</item>
        <item>Go to Record List</item>
        <item>Return Home</item>
    </string-array>
</resources>
